--- a/app/src/main/res/layout/fragment_car.xml
+++ b/app/src/main/res/layout/fragment_car.xml
@@ -213,22 +213,13 @@
             </LinearLayout>
 
         </ScrollView>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="351dp"
-            android:layout_marginTop="206dp"
-            android:background="@color/toolbar"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_mode_edit_black_24dp"
-            app:fabSize="mini"
-            app:layout_anchorGravity="bottom|center" />
-
     </RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
+        android:background="@color/toolbar"/>
 </FrameLayout>
