--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -53,22 +53,6 @@
                     android:textColor="@color/colorAccent"
                     android:textSize="18sp" />
 
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/fab"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="354dp"
-                    android:layout_marginTop="163dp"
-                    android:background="@color/toolbar"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:src="@drawable/ic_mode_edit_black_24dp"
-                    app:fabSize="mini"
-                    app:layout_anchorGravity="bottom|center" />
-
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
@@ -282,4 +266,14 @@
         </ScrollView>
 
     </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
+        android:background="@color/toolbar"/>
+
 </FrameLayout>
